--- a/Stocks/Stocks/Views/MainPage.xaml
+++ b/Stocks/Stocks/Views/MainPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Stocks"
-             x:Class="Stocks.MainPage">
+             x:Class="Stocks.MainPage"
+             BackgroundColor="#EBD4CB">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -20,16 +21,16 @@
                HorizontalOptions="Center"
                VerticalOptions="Center"
                Aspect="AspectFill"
-                   Grid.Row="1"
-                   Grid.Column="1"/>
+               Grid.Row="1"
+               Grid.Column="1"/>
 
-        <Button Text="See Stock Graphs"
-                HorizontalOptions="Center"
-                VerticalOptions="Center"
-                Clicked="OnButtonClicked"
-                    StyleClass="Primary"
-                    Grid.Row="2"
-                    Grid.Column="1"/>
+        <Label Text="STOCK GRAPHS"
+               TextColor="#890620"
+               Font="Bold,25"
+               HorizontalOptions="Center"
+               VerticalOptions="Center"
+               Grid.Row="2"
+               Grid.Column="1"/>
     </Grid>
 
 
