--- a/Stocks/Stocks/Views/ListCompanies.xaml
+++ b/Stocks/Stocks/Views/ListCompanies.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Stocks.ListCompanies"
-             Title ="Companies List">
+             Title ="Companies">
     <Grid RowSpacing="0" ColumnSpacing="0">
 
         <Grid.RowDefinitions>
