--- a/Stocks/Stocks/Views/GraphViewer.xaml
+++ b/Stocks/Stocks/Views/GraphViewer.xaml
@@ -4,7 +4,7 @@
              x:Class="Stocks.GraphViewer">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <Label Text="The graph will load shortly..."
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
