--- a/Stocks/Stocks/Views/GraphViewer.xaml
+++ b/Stocks/Stocks/Views/GraphViewer.xaml
@@ -2,6 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Stocks.GraphViewer"
+             xmlns:skia="clr-namespace:SkiaSharp;assembly=SkiaSharp"
+             xmlns:skiaforms="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
              Title ="Evolution Graph">
     <ContentPage.Content>
         <StackLayout>
@@ -10,16 +12,27 @@
                     SelectedIndexChanged="OnPickerSelectedIndexChanged">
                 <Picker.ItemsSource>
                     <x:Array Type="{x:Type x:String}">
-                        <x:String>Last 7 Days</x:String>
-                        <x:String>Last 30 Days</x:String>
+                        <x:String>Range: Last 7 Days</x:String>
+                        <x:String>Range: Last 30 Days</x:String>
                     </x:Array>
                 </Picker.ItemsSource>
             </Picker>
-            
-            <Label Text="The graph will load shortly..."
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
 
+            <Grid VerticalOptions="FillAndExpand">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <Label 
+                    Text="The graph will load shortly..."
+                    VerticalOptions="Center"
+                    HorizontalOptions="Center"
+                    Grid.Row="0"/>
+
+                <skiaforms:SKCanvasView
+                    x:Name="Canvas"
+                    Grid.Row="0"/>
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
