--- a/Stocks/Stocks/Views/GraphViewer.xaml
+++ b/Stocks/Stocks/Views/GraphViewer.xaml
@@ -2,8 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Stocks.GraphViewer"
-             xmlns:skia="clr-namespace:SkiaSharp;assembly=SkiaSharp"
-             xmlns:skiaforms="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
+             xmlns:skia="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
              Title ="Evolution Graph">
     <ContentPage.Content>
         <StackLayout>
@@ -23,10 +22,19 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Label 
-                    Text="The graph will load shortly..."
-                    VerticalOptions="Center"
-                    HorizontalOptions="Center"
+                <AbsoluteLayout Grid.Row="0">
+                    <ActivityIndicator
+                        IsVisible="{Binding IsBusy}" 
+                        IsRunning="{Binding IsBusy}"
+                        AbsoluteLayout.LayoutBounds="0.5,0.5,100,100"
+                        AbsoluteLayout.LayoutFlags="PositionProportional"
+                        x:Name="loadingSymbol"
+                        BindingContext="{x:Reference loadingSymbol}"/>
+                </AbsoluteLayout>
+
+                <skia:SKCanvasView
+                    x:Name="GraphCanvasView"
+                    PaintSurface="OnDrawGraph"
                     Grid.Row="0"/>
             </Grid>
         </StackLayout>
