--- a/Stocks/Stocks/Views/GraphViewer.xaml
+++ b/Stocks/Stocks/Views/GraphViewer.xaml
@@ -3,20 +3,37 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Stocks.GraphViewer"
              xmlns:skia="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms"
-             Title ="Evolution Graph">
+             Title ="History Graph">
     <ContentPage.Content>
         <StackLayout>
-            <Picker x:Name="Picker" 
-                    Title="Select Quotes Range" 
+            <Grid Margin="10">
+                
+                <!--Define Grid Columns-->
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40" />
+                    <ColumnDefinition Width="5*" />
+                </Grid.ColumnDefinitions>
+
+                <Image
+                    Source="click.png"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center"
+                    Aspect="AspectFill"
+                    Grid.Column="0"/>
+                <Picker 
+                    x:Name="Picker"
+                    Title="Select History Range"
                     SelectedIndexChanged="OnPickerSelectedIndexChanged"
-                    Margin="5">
-                <Picker.ItemsSource>
-                    <x:Array Type="{x:Type x:String}">
-                        <x:String>Range: Last 7 Days</x:String>
-                        <x:String>Range: Last 30 Days</x:String>
-                    </x:Array>
-                </Picker.ItemsSource>
-            </Picker>
+                    FontAttributes="Bold"
+                    Grid.Column="1">
+                    <Picker.ItemsSource>
+                        <x:Array Type="{x:Type x:String}">
+                            <x:String> Show Last 7 Days</x:String>
+                            <x:String> Show Last 30 Days</x:String>
+                        </x:Array>
+                    </Picker.ItemsSource>
+                </Picker>
+            </Grid>
 
             <Grid VerticalOptions="FillAndExpand">
                 <Grid.RowDefinitions>
